VTN-8497 - fixed. remove overflow-y.

--- a/packages/veritone-react-common/src/components/LogoDetectionEngineOutput/styles.scss
+++ b/packages/veritone-react-common/src/components/LogoDetectionEngineOutput/styles.scss
@@ -1,7 +1,6 @@
 .logoDetection {
   height: 100%;
   width: 100%;
-  overflow-y: auto;
 
   .scrolableContent {
     height: calc(100% - 45px);
